--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "@okta/okta-vue": "^1.0.0",
-    "bootstrap": "^4.1.0",
-    "bootstrap-vue": "^2.0.0-rc.7",
+    "@okta/jwt-verifier": "^1.0.0",
+    "@okta/okta-vue": "^1.3.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
+    "cors": "^2.8.5",
+    "finale-rest": "^1.1.1",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
